# cft

./: .clang-format  .clangd  .gitattributes  .gitignore  CMakeLists.txt  README.md  README.py.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml  pypi-deploy.yml  pytest.yml
.reuse/: dep5
benchmarks/: README.md  averages.sh  run_all.sh
cmake/: CPM.cmake
include/: CliArgs.hpp  CollectionOf.hpp  CountSet.hpp  Expected.hpp  Greedy.hpp  Instance.hpp  LowerBound.hpp  MStar.hpp  Multipliers.hpp  RedundancyRemoval.hpp  Refinement.hpp  Scores.hpp  SortedArray.hpp  Span.hpp  SparseBinMat.hpp  StringView.hpp  SubGradient.hpp  Subgradient.hpp  ThreePhase.hpp  TrivialHeap.hpp  cft.hpp  coverage.hpp  limits.hpp  parse_utils.hpp  parsing.hpp  subgradient.hpp  util_functions.hpp
instances/mps/: ramos3.mps
instances/rail/: best_results.txt
old/: CliArgs.hpp  ColumnFixing.hpp  RedundancyRemoval.hpp  SubGradient.hpp  ThreePhase.hpp  cft.hpp  parsing.hpp
scripts/: exp.sh
src/: main.cpp
src/algorithms/: Refinement.hpp  Refinment.hpp  ThreePhase.hpp
src/core/: Chrono.hpp  CliArgs.hpp  Expected.hpp  Instance.hpp  SortedArray.hpp  Span.hpp  SparseBinMat.hpp  StringView.hpp  cft.hpp  coverage.hpp  limits.hpp  parse_utils.hpp  parsing.hpp  random.hpp  sort.hpp  util_functions.hpp  utility.hpp  utils.hpp  xoshiro_prng.hpp
src/fixing/: ColFixing.hpp  FixingData.hpp  fix_columns.hpp
src/greedy/: Enumerator.hpp  Greedy.hpp  RedundancySet.hpp  Scores.hpp  redundancy.hpp  scores.hpp
src/instance/: Instance.hpp  parse_utils.hpp  parsing.hpp
src/pyaccft/: __init__.py  _bindings.cpp  set_cover_solver.py
src/pycft/: _bindings.cpp  set_cover_solver.py
src/subgradient/: Pricer.hpp  Subgradient.hpp  subgradient.hpp  utils.hpp
src/utils/: Chrono.hpp  CliArgs.hpp  CoverCounters.hpp  SortedArray.hpp  Span.hpp  SparseBinMat.hpp  StringView.hpp  assert.hpp  coverage.hpp  custom_types.hpp  limits.hpp  parse_utils.hpp  print.hpp  random.hpp  sort.hpp  utility.hpp  xoshiro_prng.hpp
test/: CMakeLists.txt  Chrono_unittests.cpp  CliArgs_unittests.cpp  Instance_unittests.cpp  README_unittests.cpp  Refinement_unittests.cpp  SortedArray_unittests.cpp  Span_unittests.cpp  StringView_unittests.cpp  TaggedScalar.hpp  ThreePhase_unittests.cpp  cft_unittests.cpp  complete_unittests.cpp  coverage_unittests.cpp  custom_types_unittests.cpp  greedy_unittests.cpp  instance_unittests.cpp  large_types_unittests.cpp  main.cpp  parse_utils_unittests.cpp  parsing_unittests.cpp  random_unittests.cpp  redundancy_unittests.cpp  small_types_unittests.cpp  sort_unittests.cpp  test_basics.py  test_utils.hpp  utility_unittests.cpp
